--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,7 @@
 		"POSH_THEME": "https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/clean-detailed.omp.json",
   
 		// Override me with your own timezone:
-		"TZ": "America/Moncton",
+		"TZ": "Europe/Warsaw",
 		// Use one of the "TZ database name" entries from:
 		// https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
   
@@ -73,9 +73,9 @@
 				"icon": "terminal-powershell"
 				}
 			},
-			"terminal.integrated.defaultProfile.linux": "pwsh",
-			"terminal.integrated.defaultProfile.windows": "pwsh",
-			"terminal.integrated.defaultProfile.osx": "pwsh",
+			"terminal.integrated.defaultProfile.linux": "zsh",
+			"terminal.integrated.defaultProfile.windows": "zsh",
+			"terminal.integrated.defaultProfile.osx": "Zsh",
 			"tasks.statusbar.default.hide": true,
 			"terminal.integrated.tabs.defaultIcon": "terminal-powershell",
 			"terminal.integrated.tabs.defaultColor": "terminal.ansiBlue",
